<resources>
    <string name="app_name">WoCombo</string>
    <string name="title_watch">Watch!</string>
    <string name="title_events">Events</string>
    <string name="title_schedule">Schedule</string>
    <string name="hint_login">Username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="err_login_failure">Sign in failed. Try again later</string>
    <string name="info_forgot_password">Reset password options is not ready!</string>
    <string name="sort">Sort</string>
    <string name="filters">Filters</string>
    <string name="notification">Notifications</string>
    <string name="sort_date_desc">Desc. (DAZN) date (TWO) name</string>
    <string name="sort_date_asc">Asc. (DAZN) date (TWO) name</string>
    <string name="sort_volume_asc">Asc. volume</string>
    <string name="sort_volume_desc">Desc. volume</string>
    <string name="sort_percent_changing_asc">Asc. percent changing</string>
    <string name="sort_percent_changing_desc">Desc. percent changing</string>
    <string name="info_filter_not_ready">Filters not ready yet!</string>
    <string name="info_notification_not_ready">Notifications not ready yet!</string>
    <string name="about">About</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_app_question">Do you want to exit from App?</string>
    <string name="exit_title">EXIT</string>
    <string name="about_app_description">WoCombo application was created for the interview recruitment process of "DAZN" and "Two Up Agency" company</string>
    <string name="example_user">Jan Kowalski</string>
    <string name="example_subs_desc">Subscription: Family Pack</string>
    <string name="transmission_image">transmission_image</string>
    <string name="remaining_one_day">" (Tomorrow)"</string>
    <string name="remaining_more_days">" (%d days)"</string>
    <string name="remaining_more_min">" Today (%d min)"</string>
    <string name="remaining_one_hour">" Today (1 hour)"</string>
    <string name="remaining_two_hours_more">" Today (%d hours)"</string>
    <string name="remaining_more_hours">" (%d hours)"</string>
    <string name="real_time_date">%s</string>
    <string name="err_unknown_failure">Oops! Something went wrong. Please try again!</string>
    <string name="err_internal_server_failure">A server error has occurred. Please try again later.</string>
    <string name="err_timeout_failure">There was an error connecting to the server. Please try again later!</string>
    <string name="err_no_internet_failure">No internet connection. Check your connection status and try again!</string>
    <string name="download_progres_desc">Download in progress please wait</string>
    <string name="download_progress_title">Downloading</string>
    <string name="state_icon_desc_content">state_icon_desc_content</string>
    <string name="err_no_internet_title">No internet</string>
    <string name="err_no_unknown_state_title">Error!</string>
    <string name="err_cannot_play_video">Cannot play video! Try Again!</string>
    <string name="successfully_delete_reminder">Successfully delete reminder</string>
    <string name="err_delete_reminder">Cannot delete reminder. Try again!</string>
    <string name="delete">delete</string>
    <string name="successfully_add_reminder">Successfully add reminder!</string>
    <string name="err_add_reminder">Cannot add reminder. Try Again!</string>
    <string name="no_reminders">No reminders</string>
    <string name="add_reminders_to_show_list">Add reminder to show list</string>
    <string name="sample_views_count">12K views | 1 day ago</string>
    <string name="download">Download</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="dislike">Dislike</string>
    <string name="sample_count_likes">950</string>
    <string name="avatar_content_description">avatar_content_description</string>
    <string name="title_currencies">Currencies</string>
</resources>